added /subscription/{subscription_id} handler
