# subscriptions_backend/api/http/types/subscription.go
@@ -8,6 +8,7 @@ import (
 	"subscriptions_backend/domain"
 	"time"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
 )
 
@@ -30,19 +31,19 @@ type PostCreateSubscriptionDTO struct {
 func (r PostCreateSubscriptionRequest) ToDomain() (*domain.Subscription, error) {
 	userID, err := uuid.Parse(r.UserID)
 	if err != nil {
-		return nil, err
+		return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding uuid: %v", err))
 	}
 
 	start, err := parseMonthYear(r.StartDate)
 	if err != nil {
-		return nil, err
+		return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding startDate: %v", err))
 	}
 
 	var end *time.Time
 	if r.EndDate != nil {
 		parsedEnd, err := parseMonthYear(*r.EndDate)
 		if err != nil {
-			return nil, err
+			return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding endDate: %v", err))
 		}
 		end = &parsedEnd
 	}
@@ -55,10 +56,10 @@ func (r PostCreateSubscriptionRequest) ToDomain() (*domain.Subscription, error) 
 	}, nil
 }
 
-func CreatePostSubscriptionRequest(r *http.Request) (*PostCreateSubscriptionRequest, error) {
+func CreatePostSubscriptionHandlerRequest(r *http.Request) (*PostCreateSubscriptionRequest, error) {
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
-		return nil, fmt.Errorf("error while decoding json: %v", err)
+		return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding json: %v", err))
 	}
 
 	defer r.Body.Close()
@@ -66,13 +67,32 @@ func CreatePostSubscriptionRequest(r *http.Request) (*PostCreateSubscriptionRequ
 	var req PostCreateSubscriptionRequest
 	err = json.Unmarshal(body, &req)
 	if err != nil {
-		return nil, fmt.Errorf("error while decoding json: %v", err)
+		return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding json: %v", err))
 	}
 	return &req, nil
 }
 
 type PostCreateSubscriptionResponse struct {
 	SubscriptionID uuid.UUID `json:"subscription_id"`
+}
+
+func GetSubscriptionByIDHandlerRequest(r *http.Request) (*domain.Subscription, error) {
+	subIDStr := chi.URLParam(r, "subscription_id")
+	subID, err := uuid.Parse(subIDStr)
+	if err != nil {
+		return nil, domain.ErrBadRequest(fmt.Sprintf("error while decoding uuid: %v", err))
+	}
+	subs := domain.Subscription{SubscriptionID: subID}
+	return &subs, nil
+}
+
+type GetSubscriptionByIDResponse struct {
+	SubscriptionID uuid.UUID  `json:"subscription_id"`
+	ServiceName    string     `json:"service_name"`
+	Price          int        `json:"price"`
+	UserID         uuid.UUID  `json:"user_id"`
+	StartDate      time.Time  `json:"start_date"`
+	EndDate        *time.Time `json:"end_date"`
 }
 
 func parseMonthYear(s string) (time.Time, error) {
